--- a/yongDa20171121/css/unslider-dots.css
+++ b/yongDa20171121/css/unslider-dots.css
@@ -28,9 +28,10 @@
   text-indent: -999em;
   border: 2px solid rgba(163, 163, 163, 0.75);
   cursor: pointer;
-  
+  display: none;
 }
 .unslider-nav ol li.unslider-active {
   background: rgba(254, 255, 255, 0.5);
   cursor: default;
+  display: none;
 }
