--- a/cysteel.3/css/default.css
+++ b/cysteel.3/css/default.css
@@ -20,7 +20,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: black;
+    color: darkblue;
     font-weight: 400;
     min-height: 900px;
 }
